# nativedoctor

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  LICENSE.md  README.md  dotapi.md  index.html  package.json  pnpm-lock.yaml  schema.yaml  spec.api.md  spec.yaml.md  test.api  vite.config.ts  what-am-i-doing-here.md  wtf-am-i-doing-here.md
api/: Cargo.toml
api/src/: init.rs  lib.rs
api/src/executor/: mod.rs  runner.rs  schema.rs
api/src/schema/: rustle-v0.0.1.draft-07.schema.yaml
api/src/scripting/: rhai.rs
api/src/tests/: test_parser.rs  test_runner.rs  test_seq_gen.rs
api/src/tests/test_yaml_files/: call_sequence_generation_check_complex.api.yaml
api/src/wrapper/: response.rs
api/src/wrappers/: response.rs
app/: .gitignore  Cargo.toml  Dioxus.toml  twatch
app/assets/: main.css  tailwind.config.css  tailwind.output.css
app/src/: constants.rs  dashboard.rs  main.rs  session.rs
app/src/actions/: mod.rs  project.rs
app/src/appdata/: mod.rs  prelude.rs  project.rs  requests.rs  tabs.rs
app/src/components/: dialog.rs  mod.rs  toasts.rs  wm_drag_area.rs
app/src/logic/: mod.rs  project.rs
app/src/managers/: mod.rs  project.rs
app/src/meta/: mod.rs  recents.rs
app/src/session/: casting.rs  fs.rs  mod.rs  types.rs
app/src/states/: app.rs  mod.rs  project.rs  toasts.rs
app/src/ui/: http_method_badge.rs  mod.rs  select.rs  side_bar.rs  wm_project_button.rs  work_view.rs
app/src/ui/dialog/: env_edit_dialog.rs
app/src/ui/tabs/: mod.rs  page.rs  request.rs  tabs.rs
app/src/views/: dashboard.rs  empty.rs  mod.rs  project.rs  start.rs
cli/: Cargo.toml
cli/src/: Cargo.toml  builder.rs  ds.rs  init.rs  lib.rs  main.rs  parser.rs  run.rs
cli/src/actions/: init.rs  mod.rs  run.rs  tree.rs  utils.rs
cli/src/tests/: t.rs
components/: Cargo.toml  todo.md
components/assets/: main.css
components/src/: lib.rs  main.rs  prelude.rs  traits.rs
components/src/border/: mod.rs
components/src/button/: mod.rs
components/src/buttongroup/: mod.rs
components/src/context_menu/: mod.rs
components/src/contextmenu/: mod.rs
components/src/keyvalue/: editor.rs  mod.rs  node.rs  types.rs
components/src/label/: mod.rs
components/src/numberfield/: mod.rs
components/src/pane/: mod.rs
components/src/popup/: mod.rs
components/src/select/: mod.rs
components/src/separator/: mod.rs
components/src/tableinput/: mod.rs
components/src/tabs/: mod.rs  utils.rs
components/src/textfield/: mod.rs
components/src/toast/: mod.rs  toast_item.rs
components/src/wm_drag_area/: mod.rs
core/: Cargo.toml  README.md  fs.rs  lib.rs
core/models/: env_root.rs  mod.rs
core/schema/: calls.rs  env.rs  mod.rs  project.rs  request_config.rs  roots.rs
core/src/: constants.rs  init.rs  lib.rs
core/src/executor/: mod.rs  runner.rs  utils.rs
core/src/schema/: env.rs  meta.rs  mod.rs  ndoc-v0.0.1.draft-07.schema.yaml  project.rs  request.rs  request_body.rs  request_config.rs  request_script.rs  root.rs  user.rs
core/src/tests/: .gitignore  mod.rs  root.rs  schemas.rs  test_runner.rs
crates/app-egui/: Cargo.toml  app.rs  commands.rs  main.rs  runtime.rs  shortcuts.rs  state.rs
crates/app-egui/components/: menubar.rs  mod.rs  requestpanel.rs
crates/app-egui/pages/: mod.rs  request.rs
crates/app-egui/src/: main.rs
crates/app-gpui/: Cargo.toml
crates/app-gpui/src/: app.rs  constants.rs  main.rs  menu.rs
crates/app-ratatui/: Cargo.toml
crates/app-ratatui/src/: app.rs  commands.rs  main.rs  runtime.rs  state.rs  style.rs
crates/nd-cli/: Cargo.toml
crates/nd-cli/src/: cmd_generate.rs  cmd_new.rs  cmd_rhai_definitions.rs  cmd_run.rs  cmd_runall.rs  cmd_tui.rs  cmd_web.rs  generate_cmd.rs  logging.rs  main.rs  new_cmd.rs  print.rs
crates/nd-core/: Cargo.toml
crates/nd-core/definitions/: nativedoctor-request.d.rhai
crates/nd-core/examples/: export_schemas.rs
crates/nd-core/src/: constants.rs  direction.rs  discover.rs  env.rs  error.rs  execute.rs  executor.rs  iterself.rs  lib.rs  load.rs  model.rs  rhai_host.rs  sequence.rs  template.rs
crates/nd-core/tests/: discover.rs  discovery_tests.rs  load_request.rs  load_sequence.rs  request_execution_tests.rs  request_expansion_tests.rs  request_file_schema.rs  rhai_definitions_tests.rs  rhai_import_tests.rs  rhai_post_script.rs  runtime_env_tests.rs  sequence_file_schema.rs  sequence_wiremock.rs  stream_implementation.rs  template_expand.rs  util_tests.rs  wiremock_http.rs
crates/nd-qt/: .qmlls.ini  Cargo.toml  build.rs
crates/nd-qt/qml/: main.qml
crates/nd-qt/src/: cxxqt_object.rs  main.rs
crates/nd-tui/: Cargo.toml
crates/nd-tui/src/: app.rs  lib.rs  main.rs  runner.rs  ui.rs
crates/nd-web/: Cargo.toml  Dioxus.toml  README.md  build.rs
crates/nd-web/frontend/: components.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
crates/nd-web/src/: api.rs  app.rs  bootstrap.rs  config.rs  embed.rs  lib.rs  main.rs  path_sandbox.rs  path_utils.rs  vite.rs  workspace.rs
crates/nd-web/tests/: api_tests.rs  ws_session_test.rs
dotapilib/: Cargo.toml
dotapilib/src/: dotapi.pest  grammar.pest  lib.rs  rustle.draft-07.schema.yaml  types.rs
dotapilib/src/parser/: builder.rs  mod.rs  types.rs  utils.rs  yaml.rs
dotapilib/src/tests/: mod.rs  parser.rs  request.rs  test_parser.rs  test_runner.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/core/schema/: mod.rs
src-tauri/migrations/: 001_initial.sql  002_requests_and_response.sql
src-tauri/src/: app.rs  client.rs  constants.rs  db.rs  lib.rs  main.rs  project.rs  resource.rs  schema.rs  scripting.rs
src-tauri/src/core/: fs.rs  mod.rs
src-tauri/src/schema/: folder.rs  http.rs  mod.rs  project.rs  request.rs  sequence.rs
ui/: .gitignore  Cargo.toml  README.md
ui/assets/: main.css  tailwind.config.css  tailwind.output.css
ui/src/: appdata.rs  main.rs
ui/src/appdata/: tabs.rs
ui/src/ui/: enviroment_selector.rs  http_method_badge.rs  mod.rs  request_panel.rs  side_bar.rs  tab.rs  work_view.rs
(+378 files in other folders)
