[workspace]
resolver = '2'
members = [
    "crates/app-ratatui",
    "crates/app-egui",
    "crates/app-gpui",
    "crates/models",
    "crates/nd-core",
]
default-members = ["crates/app-ratatui"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
