[package]
name = "app"
version = "0.1.0"
authors = ["rubbie kelvin <dev.rubbie@gmail.com>"]
edition = "2021"

[dependencies]
dioxus-desktop = "0.6.3"
dioxus = { version = "0.6.0" }
dioxus-free-icons = { version = "0.9", features = [
    "lucide",
    "hero-icons-outline",
    "hero-icons-solid",
] }
uuid = { version = "1.17.0", features = ["v4"] }
nativedoctor-core = { path = "../core" }
rfd = "0.15.3"
tracing = "0.1.41"
dioxus-logger = "0.6.2"


[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
