[package]
name = "app"
version = "0.1.0"
authors = ["rubbie kelvin <dev.rubbie@gmail.com>"]
edition = "2021"

[dependencies]
dioxus-free-icons = { version = "0.9", features = [
    "lucide",
    "hero-icons-outline",
    "hero-icons-solid",
] }
uuid = { version = "1.17.0", features = ["v4", "js", "serde"] }
nativedoctor-core = { path = "../core" }
tracing = "0.1.41"
dioxus-logger = "0.6.2"
components = { path = "../components" }
serde_yaml = { version = "0.9.34" }
slug = "0.1.6"
nanoid = "0.4.0"
strum = { version = "0.27.1", features = ["derive"] }
serde = "1.0.219"
serde_json = "1.0.141"

# Explicit getrandom with js feature for WASM support
getrandom = { version = "0.2", features = ["js"] }

# Web-only dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus = { version = "0.6.1", default-features = false, features = ["web", "macro"] }

# Desktop-only dependencies (file dialogs don't work in browsers)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rfd = "0.15.3"
dioxus = { version = "0.6.1", default-features = false, features = ["desktop", "macro"] }

[features]
default = ["desktop"]
web = []
desktop = []
mobile = []
