[package]
name = "rustle-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = {version = "4.5.37", features = ["derive"]}
rustle-core = { path = "../core" }
reqwest = "0.12.15"
tokio = { version = "1.45.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
colored = "3.0.0"
serde_json = "1.0"
