[package]
name = "components"
version = "0.1.0"
edition = "2024"
authors = ["rubbie kelvin <dev.rubbie@gmail.com>"]

[lib]
name = "components_lib"

[dependencies]
dioxus = { version = "0.6.0" }
dioxus-free-icons = { version = "0.9", features = [
    "lucide",
    "hero-icons-outline",
    "hero-icons-solid",
] }
uuid = { version = "1.17.0", features = ["v4", "js"] }
rfd = "0.15.3"
tracing = "0.1.41"
strum = { version = "0.27.1", features = ["derive"] }


[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
