[package]
name = "nativedoctor-core"
version = "0.1.0"
edition = "2024"

[lib]
path = "lib.rs"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = { version = "0.9.34" }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
tokio = { version = "1.45.0", features = ["full"] }
tokio-stream = "0.1.17"
tracing = "0.1.41"
anyhow = "1.0.98"
