[package]
name = "nativedoctor-core"
version = "0.1.0"
edition = "2024"

[lib]
path = "lib.rs"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = { version = "0.9.34" }
uuid = { version = "1.17.0", features = ["v4", "serde", "js"] }
tracing = "0.1.41"
anyhow = "1.0.98"

# Explicit getrandom with js feature for WASM support
getrandom = { version = "0.2", features = ["js"] }
