[package]
name = "dotapilib"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
async-recursion = "1.1.1"
pest_derive = "2.8.0"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["json", "multipart"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = { version = "0.9.34" }
tokio = { version = "1.45.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.16.0", features = ["v4"] }
