[package]
name = "nativedoctor"
version = "0.1.0"
description = "A Tauri App"
authors = ["Rubbie Kelvin"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "nativedoctor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.15.3"
serde_yaml = { version = "0.9.34" }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
tokio = { version = "1.45.0", features = ["full"] }
tokio-stream = "0.1.17"
tracing = "0.1.41"
anyhow = "1.0.98"
