[package]
name = "rustle-ui"
version = "0.1.0"
authors = ["rubbie kelvin <rubbiekelvinvoltsman@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus-desktop = "0.6.3"
dioxus = { version = "0.6.0", features = ['router'] }
dioxus-free-icons = { version = "0.9", features = ["lucide"] }


[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
