[package]
name = "app-gpui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
env_logger = "0.11.8"
nd-core = { path = "../nd-core" }
gpui = { git = "https://github.com/zed-industries/zed.git" }
gpui-component = { git = "https://github.com/longbridge/gpui-component.git" }
log = "0.4.27"

[package.metadata.bundle]
name = "Native doctor"
identifier = "com.rubbietheone.nativedoctor"
version = "0.1.0"
