[package]
name = "app-ratatui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
color-eyre = "0.6.5"
crossterm = "0.29.0"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
serde = { version = "1.0.219", features = ["derive"] }
nd-core = { path = "../nd-core" }
strum = { version = "0.27.2", features = ["derive"] }
reqwest = "0.12.23"
tui-textarea = "0.7.0"
