[package]
name = "nd-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "nativedoctor"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
nd-generate = { path = "../nd-generate" }
nd-web = { path = "../nd-web" }
nd-tui = { path = "../nd-tui" }
nd-core = { path = "../nd-core" }
nd-constants = { path = "../nd-constants" }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
colored = "3.1.1"

[lints.clippy]
needless_return = "allow"
