[package]
name = "nd-core"
version.workspace = true
edition.workspace = true

[dependencies]
base64 = "0.22"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
schemars = { version = "0.8", features = ["derive"] }
rhai = { version = "1.20", features = ["sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }
tracing = "0.1"
nd-constants = { path = "../nd-constants" }
strum_macros = "0.28"
strum = {version="0.28.0", features = ["derive"]}
dotenvy = "0.15"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
