[package]
name = "nd-core"
version.workspace = true
edition.workspace = true

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
colored = "3.1.1"
fake = { version = "4", features = ["chrono"] }
nanoid = "0.4"
rand = "0.8"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
schemars = { version = "0.8", features = ["derive"] }
# `metadata` + `internals`: doc comments on registered functions and `Engine::definitions()` for `.d.rhai` LSP stubs.
rhai = { version = "1.20", features = ["sync", "metadata", "internals"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
nd-constants = { path = "../nd-constants" }
strum_macros = "0.28"
strum = {version="0.28.0", features = ["derive"]}
dotenvy = "0.15"

[lints.clippy]
needless_return = "allow"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
