[package]
name = "nd-tui"
version.workspace = true
edition.workspace = true

[lib]
name = "nd_tui"
path = "src/lib.rs"

[[bin]]
name = "nd-tui"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
crossterm = { version = "0.28", features = ["event-stream"] }
futures-util = "0.3"
nd-core = { path = "../nd-core" }
ratatui = "0.29"
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
unicode-width = "0.2"

[lints.clippy]
needless_return = "allow"
