[package]
name = "nd-web"
version.workspace = true
edition.workspace = true

[build-dependencies]
walkdir = "2"

[lib]
name = "nd_web"
path = "src/lib.rs"

[[bin]]
name = "nd-web"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = { version = "0.8.4", features = ["ws"] }
base64 = "0.22"
mime_guess = "2"
nd-core = { path = "../nd-core" }
nd-constants = { path = "../nd-constants" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust-embed = "8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
hyper = "1"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5", features = ["util"] }

[lints.clippy]
needless_return = "allow"
